--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sidebarx: ^0.15.0
   get: ^4.6.5
   webview_flutter: ^4.2.0
+  gsheets: ^0.4.2
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
