Added dummy creds and updated readme

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/lib/credentials/
+/lib/credentials/credentials.dart
 
 # Symbolication related
 app.*.symbols
