--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sidebarx: ^0.15.0
   get: ^4.6.5
-  webview_flutter: ^4.2.0
   gsheets: ^0.4.2
   email_validator: ^2.1.17
+  flutter_inappwebview: ^5.7.2+3
 
 dev_dependencies:
   flutter_test:
