--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   gsheets: ^0.4.2
   email_validator: ^2.1.17
   flutter_inappwebview: ^5.7.2+3
+  flutter_advanced_drawer: ^1.3.5
 
 dev_dependencies:
   flutter_test:
