--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   email_validator: ^2.1.17
   flutter_inappwebview: ^5.7.2+3
   flutter_advanced_drawer: ^1.3.5
+  font_awesome_flutter: ^10.4.0
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
