--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_advanced_drawer: ^1.3.5
   font_awesome_flutter: ^10.4.0
   google_fonts: ^4.0.4
+  flutter_animated_button: ^2.0.3
+  flutter_login: ^4.1.1
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
 
 dev_dependencies:
   flutter_test:
