--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   audioplayers: ^4.1.0
+  syncfusion_flutter_calendar: ^22.1.34
 
 dev_dependencies:
   flutter_test:
