--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   firebase_core: ^2.14.0
   audioplayers: ^4.1.0
   syncfusion_flutter_calendar: ^22.1.34
+  hive_flutter: ^1.1.0
+  timezone: ^0.9.2
+  flutter_local_notifications: ^14.1.1
 
 dev_dependencies:
   flutter_test:
