--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,9 @@ flutter:
     - assets/
     - assets/icons/
     - assets/images/
+    - assets/images/dino/
+    - assets/images/cacti/
+    - assets/images/ptera/
     - assets/audio/
   #   - images/a_dot_ham.jpeg
 
