--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   timezone: ^0.9.2
   flutter_local_notifications: ^14.1.1
   carousel_slider: ^4.2.1
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
