--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   flutter_local_notifications: ^14.1.1
   carousel_slider: ^4.2.1
   internet_connection_checker: ^1.0.0+1
+  flutter_slimy_card: ^1.0.2
+  animate_gradient: ^0.0.2+1
+  stacked_card_carousel: ^0.0.4
+  flip_card: ^0.7.0
+  just_audio: ^0.9.34
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +85,7 @@ flutter:
   assets:
     - assets/
     - assets/icons/
+    - assets/icons/events_dept_icons/
     - assets/images/
     - assets/images/dino/
     - assets/images/cacti/
