--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,7 +87,7 @@ flutter:
     - assets/icons/
     - assets/icons/events_dept_icons/
     - assets/images/
-    - assets/images/dino/
+    - assets/images/puddles/
     - assets/images/cacti/
     - assets/images/ptera/
     - assets/audio/
